made changes in the footer logo,font famiy changed,transition end changed,auth icon changed,aligned the elements and made some bug fixes

--- a/css/footer.css
+++ b/css/footer.css
@@ -1,33 +1,48 @@
 /*******************************************Header styling*******************************************/
-.footer_section{
+.footer_section {
     background: url(../assets/footer_section/Footer-background-LightMode.svg);
-    background-size:cover;
+    background-size: cover;
     padding: 79px 240px 15px;
     text-align: center;
 }
-.footer_brand{
-    padding: 30px 0px;
+
+.footer_brand {
+    padding: 40px 0px;
 }
-.footer_brand a{
+
+.footer-b {
+    width: 44px;
+    margin-right: 0px;
+}
+
+.zero_mar {
+    display: inline;
+}
+
+.footer_brand a {
     font-weight: 500;
     font-size: 48px;
     line-height: 72px;
     color: var(--clr-primary);
 }
-.footer_social-icon{
+
+.footer_social-icon {
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 35%;
     margin: auto;
 }
-.none{
+
+.none {
     display: none;
 }
-.hid{
+
+.hid {
     display: block;
 }
-.footer_copyright{
+
+.footer_copyright {
     font-weight: 500;
     font-size: 14px;
     line-height: 26px;
@@ -37,49 +52,58 @@
 
 /* <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<MEDIA QUERIES<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< */
 /* <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<[1201px-1400px]<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< */
-@media (min-width:1201px) and (max-width:1400px){
+@media (min-width:1201px) and (max-width:1400px) {
     .footer_section {
         padding: 70px 90px 40px;
     }
 
 }
+
 /* <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<[1201px-1400px]<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< */
-@media (min-width:993px) and (max-width:1200px){
+@media (min-width:993px) and (max-width:1200px) {
     .footer_section {
         padding: 60px 40px 40px;
     }
 }
- /* <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<[768px-992px]<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< */
- @media (min-width:768px) and (max-width:992px){
+
+/* <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<[768px-992px]<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< */
+@media (min-width:768px) and (max-width:992px) {
     .footer_section {
         padding: 60px 40px 40px;
     }
+
     .footer_social-icon {
         width: 58%;
     }
 }
- /* <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<[568px-767px]<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< */
- @media (min-width:568px) and (max-width:767px){
+
+/* <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<[568px-767px]<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< */
+@media (min-width:568px) and (max-width:767px) {
     .footer_section {
         padding: 60px 30px 40px;
     }
+
     .footer_social-icon {
         width: 58%;
     }
- }
+}
+
 /* <<<<<<<<<<<<<<<<<<<<<<<<<<<<<<[567px]<<<<<<<<<<<<<<<<<<<<<<<<<<<<<< */
-@media screen and (max-width:567px){
+@media screen and (max-width:567px) {
     .footer_section {
         padding: 60px 16px 40px;
     }
+
     .footer_social-icon {
         width: 88%;
     }
+
     .footer_brand a {
         font-size: 32px;
-    }    
+    }
+
     .footer_copyright {
         font-size: 14px;
         line-height: 20px;
-    }    
+    }
 }
